--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,6 @@
 		  "email": "white@white.is"
 		}
 	  ],
-	"version": "24.5.6",
-	"license": "Yes. We own this."
+	"version": "24.11.13",
+	"license": "A long list of webpages in the site."
 }
